add order detail

--- a/pages/confirmOrder.html
+++ b/pages/confirmOrder.html
@@ -31,7 +31,7 @@
 	<div class="mod-full mod-gray">
 		<div class="grid-m1210 pt25b75">
 			<div class="order-info">
-				<h2 class="title">确定订单</h2>
+				<h2 class="order-title">确定订单</h2>
 				<h4 class="name">店铺名称<span class="color-gray">好家乡小超市</span></h4>
 				<div class="order-address cf">
 					<i class="iconfont icon-location fl">&#xe657;</i>
