--- a/pages/orderDetail.html
+++ b/pages/orderDetail.html
@@ -30,8 +30,37 @@
 	<!-- 购物车列表 -->
 	<div class="mod-full mod-gray">
 		<div class="grid-m1210 pt25b75">
+			<h2 class="order-title detail-title">订单详情</h2>
+			<div class="order-detail-progress cf">
+				<div class="order-state fl">
+					<h4>订单号<span>2010028199990</span></h4>
+					<p class="state">待审核</p>
+					<a href="javascript:;" class="print"><i class="iconfont icon-print">&#xe604;</i>打印订单</a>
+				</div>
+				<div class="order-progress fl">
+					<p>您的订单已提交，等待供应商审核</p>
+					<ul class="progress">
+						<li class="pro-state">
+							<i class="iconfont icon-xiehuo">&#xe64b;</i>订单已提交<span>2017-02-15 12:23:00</span>
+						</li>
+						<li class="pro-state active">
+							<i class="iconfont icon-daishenhe">&#xe67e;</i>待审核
+						</li>
+						<li class="pro-state">
+							<i class="iconfont icon-daishenhe">&#xe680;</i>拣货中<span>2017-02-15 12:23:00</span>
+						</li>
+						<li class="pro-state">
+							<i class="iconfont icon-daishenhe">&#xe67c;</i>已发货<span>2017-02-15 12:23:00</span>
+						</li>
+						<li class="pro-state">
+							<i class="iconfont icon-daishenhe">&#xe67d;</i>完成<span>2017-02-15 12:23:00</span>
+						</li>
+					</ul>
+					<a href="javascript:;" class="rect-border-radius cancel-order">取消订单</a>
+					<a href="javascript:;" class="rect-border-radius">订单加急</a>
+				</div>
+			</div>
 			<div class="order-info">
-				<h2 class="title">确定订单</h2>
 				<h4 class="name">店铺名称<span class="color-gray">好家乡小超市</span></h4>
 				<div class="order-address cf">
 					<i class="iconfont icon-location fl">&#xe657;</i>
