add order detail

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
 <body>
 	<!--顶部-->
 	<div class="mod-full mod-gray">
-		<div class="grid-m1210 ptb10 ff-ss">
+		<div class="grid-m1210 ptb10 ff-ss cf">
 			<div class="top-left">
 				<!-- 未登陆 -->
 				<a href="" class="login">亲，请登录</a><a href="" class="free-regist">免费注册</a>
