--- a/pages/orderDetail.html
+++ b/pages/orderDetail.html
@@ -31,6 +31,9 @@
 	<div class="mod-full mod-gray">
 		<div class="grid-m1210 pt25b75">
 			<h2 class="order-title detail-title">订单详情</h2>
+
+
+
 			<div class="order-detail-progress cf">
 				<div class="order-state fl">
 					<h4>订单号<span>2010028199990</span></h4>
@@ -38,26 +41,148 @@
 					<a href="javascript:;" class="print"><i class="iconfont icon-print">&#xe604;</i>打印订单</a>
 				</div>
 				<div class="order-progress fl">
-					<p>您的订单已提交，等待供应商审核</p>
+					<p class="cgray">您的订单已提交，等待供应商审核</p>
 					<ul class="progress">
 						<li class="pro-state">
 							<i class="iconfont icon-xiehuo">&#xe64b;</i>订单已提交<span>2017-02-15 12:23:00</span>
 						</li>
-						<li class="pro-state active">
+						<li class="pro-state dot-item active">
 							<i class="iconfont icon-daishenhe">&#xe67e;</i>待审核
 						</li>
-						<li class="pro-state">
+						<li class="pro-state dot-item">
 							<i class="iconfont icon-daishenhe">&#xe680;</i>拣货中<span>2017-02-15 12:23:00</span>
 						</li>
-						<li class="pro-state">
+						<li class="pro-state dot-item">
 							<i class="iconfont icon-daishenhe">&#xe67c;</i>已发货<span>2017-02-15 12:23:00</span>
 						</li>
-						<li class="pro-state">
+						<li class="pro-state dot-item">
 							<i class="iconfont icon-daishenhe">&#xe67d;</i>完成<span>2017-02-15 12:23:00</span>
 						</li>
 					</ul>
 					<a href="javascript:;" class="rect-border-radius cancel-order">取消订单</a>
-					<a href="javascript:;" class="rect-border-radius">订单加急</a>
+					<a href="javascript:;" class="rect-border-radius btn-shadow">订单加急</a>
+				</div>
+				<div class="dropbox triangle-down">
+					<span>订单加急成功!</span>
+					<p>亲，您的订单加急已成功提交，请耐心等待处理</p>
+				</div>
+			</div>
+			<div class="order-detail-progress cf">
+				<div class="order-state fl">
+					<h4>订单号<span>2010028199990</span></h4>
+					<p class="state">拣货中</p>
+					<a href="javascript:;" class="print"><i class="iconfont icon-print">&#xe604;</i>打印订单</a>
+				</div>
+				<div class="order-progress fl">
+					<p class="cgray">亲，您的订单正在拣货，请耐心等待发货</p>
+					<ul class="progress">
+						<li class="pro-state">
+							<i class="iconfont icon-xiehuo">&#xe64b;</i>订单已提交<span>2017-02-15 12:23:00</span>
+						</li>
+						<li class="pro-state dot-item">
+							<i class="iconfont icon-daishenhe">&#xe67e;</i>待审核
+						</li>
+						<li class="pro-state dot-item active">
+							<i class="iconfont icon-daishenhe">&#xe680;</i>拣货中<span>2017-02-15 12:23:00</span>
+						</li>
+						<li class="pro-state dot-item">
+							<i class="iconfont icon-daishenhe">&#xe67c;</i>已发货<span>2017-02-15 12:23:00</span>
+						</li>
+						<li class="pro-state dot-item">
+							<i class="iconfont icon-daishenhe">&#xe67d;</i>完成<span>2017-02-15 12:23:00</span>
+						</li>
+					</ul>
+					<a href="javascript:;" class="rect-border-radius btn-shadow">订单加急</a>
+				</div>
+				<div class="dropbox triangle-down">
+					<span>订单加急成功!</span>
+					<p>亲，您的订单加急已成功提交，请耐心等待处理</p>
+				</div>
+			</div>
+			<div class="order-detail-progress cf">
+				<div class="order-state fl">
+					<h4>订单号<span>2010028199990</span></h4>
+					<p class="state">已发货</p>
+					<a href="javascript:;" class="print"><i class="iconfont icon-print">&#xe604;</i>打印订单</a>
+				</div>
+				<div class="order-progress fl">
+					<p class="cgray">您的订单已提交，等待供应商审核</p>
+					<ul class="progress">
+						<li class="pro-state">
+							<i class="iconfont icon-xiehuo">&#xe64b;</i>订单已提交<span>2017-02-15 12:23:00</span>
+						</li>
+						<li class="pro-state dot-item">
+							<i class="iconfont icon-daishenhe">&#xe67e;</i>待审核
+						</li>
+						<li class="pro-state dot-item">
+							<i class="iconfont icon-daishenhe">&#xe680;</i>拣货中<span>2017-02-15 12:23:00</span>
+						</li>
+						<li class="pro-state dot-item active">
+							<i class="iconfont icon-daishenhe">&#xe67c;</i>已发货<span>2017-02-15 12:23:00</span>
+						</li>
+						<li class="pro-state dot-item">
+							<i class="iconfont icon-daishenhe">&#xe67d;</i>完成<span>2017-02-15 12:23:00</span>
+						</li>
+					</ul>
+					<a href="javascript:;" class="rect-border-radius cancel-order hide">取消订单</a>
+					<a href="javascript:;" class="rect-border-radius btn-shadow cyellow">确认收货</a>
+				</div>
+				<div class="dropbox triangle-down hide">
+					<span>订单加急成功!</span>
+					<p>亲，您的订单加急已成功提交，请耐心等待处理</p>
+				</div>
+			</div>
+			<div class="order-detail-progress cf">
+				<div class="order-state fl">
+					<h4>订单号<span>2010028199990</span></h4>
+					<p class="state">完成</p>
+					<a href="javascript:;" class="print"><i class="iconfont icon-print">&#xe604;</i>打印订单</a>
+				</div>
+				<div class="order-progress fl">
+					<p class="cgray">订单已完成，谢谢您的光临，欢迎下次光临</p>
+					<ul class="progress">
+						<li class="pro-state">
+							<i class="iconfont icon-xiehuo">&#xe64b;</i>订单已提交<span>2017-02-15 12:23:00</span>
+						</li>
+						<li class="pro-state dot-item active">
+							<i class="iconfont icon-daishenhe">&#xe67e;</i>待审核
+						</li>
+						<li class="pro-state dot-item">
+							<i class="iconfont icon-daishenhe">&#xe680;</i>拣货中<span>2017-02-15 12:23:00</span>
+						</li>
+						<li class="pro-state dot-item">
+							<i class="iconfont icon-daishenhe">&#xe67c;</i>已发货<span>2017-02-15 12:23:00</span>
+						</li>
+						<li class="pro-state dot-item">
+							<i class="iconfont icon-daishenhe">&#xe67d;</i>完成<span>2017-02-15 12:23:00</span>
+						</li>
+					</ul>
+					<a href="javascript:;" class="rect-border-radius cancel-order hide">取消订单</a>
+					<a href="javascript:;" class="rect-border-radius cyellow">再次下单</a>
+				</div>
+				<div class="dropbox triangle-down hide">
+					<span>订单加急成功!</span>
+					<p>亲，您的订单加急已成功提交，请耐心等待处理</p>
+				</div>
+			</div>
+			<div class="order-detail-progress cf">
+				<div class="order-state fl">
+					<h4>订单号<span>2010028199990</span></h4>
+					<p class="state cancel-color">已取消</p>
+					<a href="javascript:;" class="print"><i class="iconfont icon-print">&#xe604;</i>打印订单</a>
+				</div>
+				<div class="order-progress fl">
+					<p class="cgray">订单已取消，谢谢您的光临，欢迎下次光临</p>
+					<ul class="progress cancel">
+						<li class="pro-state">
+							<i class="iconfont icon-xiehuo">&#xe64b;</i>订单已提交<span>2017-02-15 12:23:00</span>
+						</li>
+						<li class="pro-state dot-item active">
+							<i class="iconfont icon-daishenhe">&#xe67f;</i>已取消<span>2017-02-15 12:23:00</span>
+						</li>
+					</ul>
+					<a href="javascript:;" class="rect-border-radius cancel-order hide">取消订单</a>
+					<a href="javascript:;" class="rect-border-radius cyellow">重新下单</a>
 				</div>
 			</div>
 			<div class="order-info">
@@ -80,7 +205,7 @@
 					<ul class="cf">
 						<li class="checkout-item">
 							<p>送货上门</p>
-							<p class="color-mute" >供应商送货上门</p>
+							<p class="color-mute">供应商送货上门</p>
 						</li>
 						<!--<li class="checkout-item">
 							<p>自提</p>
@@ -93,7 +218,7 @@
 					<ul class="cf">
 						<li class="checkout-item">
 							<p>货到付款</p>
-							<p class="color-mute" >送货上门后再支付</p>
+							<p class="color-mute">送货上门后再支付</p>
 						</li>
 						<!--<li class="checkout-item">
 							<p>网银转账</p>
@@ -107,150 +232,150 @@
 				</div>
 			</div>
 			<div class="shop-information">
-                <a href="javascript:;">
-                    <img src="http://fuss10.elemecdn.com/a/c8/1796ec76390e5fe5357a869fde250jpeg.jpeg?imageMogr2/thumbnail/190x190/format/webp/quality/85"
-                        alt="">
-                    <span class="name">大大批发厂</span>
-                </a>
-                <div class="contact">
-                    <img src="../images/tel.png" class="tel">供应商电话<span>028-88515511</span>13521515418
-                </div>
-            </div>
-
-            <!--购物车商品列表 -->
-            <div class="confirm-order-cart">
-                <div class="shop-cart-row bg-gray">
-                    <div class="cell itemname">商品</div>
-                    <div class="cell itemprice">单价</div>
-                    <div class="cell itemquantity">数量</div>
-                    <div class="cell itemtotal">金额</div>
-                    <div class="cell itemdelete">删除</div>
-                </div>
-                <div class="shop-cart-row">
-                    <div class="cell itemname">
-                        	<div class="goods-item">
-							<div class="img fl">
-								<a href="" target="_blank" title="">
-									<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
-								</a>
-							</div>
-							<div class="info fl">
-								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡dsg斯蓝莓咖啡和卡斯</a>
-								<p class="spec">规格 550ml  成件规格 24瓶/件</p>
-							</div>
-						</div>
-                    </div>
-                    <div class="cell itemprice"><span><i>￥</i>12232.00</span></div>
-                    <div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
-                    </div>
-                    <div class="cell itemtotal">
-                        <span class="total"><i>￥</i>1132323.22</span>
-                    </div>
-                    <div class="cell itemdelete"><i class="iconfont icon-delete">&#xe664;</i></div>
-                </div>
-                <div class="shop-cart-row">
-                    <div class="cell itemname">
-                        	<div class="goods-item">
-							<div class="img fl">
-								<a href="" target="_blank" title="">
-									<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
-								</a>
-							</div>
-							<div class="info fl">
-								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡dsg斯蓝莓咖啡和卡斯</a>
-								<p class="spec">规格 550ml  成件规格 24瓶/件</p>
-							</div>
-						</div>
-                    </div>
-                    <div class="cell itemprice"><span><i>￥</i>12232.00</span></div>
-                    <div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
-                    </div>
-                    <div class="cell itemtotal">
-                        <span class="total"><i>￥</i>1132323.22</span>
-                    </div>
-                    <div class="cell itemdelete"><i class="iconfont icon-delete">&#xe664;</i></div>
-                </div>
-                <div class="shop-cart-row">
-                    <div class="cell itemname">
-                        	<div class="goods-item">
-							<div class="img fl">
-								<a href="" target="_blank" title="">
-									<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
-								</a>
-							</div>
-							<div class="info fl">
-								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡dsg斯蓝莓咖啡和卡斯</a>
-								<p class="spec">规格 550ml  成件规格 24瓶/件</p>
-							</div>
-						</div>
-                    </div>
-                    <div class="cell itemprice"><span><i>￥</i>12232.00</span></div>
-                    <div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
-                    </div>
-                    <div class="cell itemtotal">
-                        <span class="total"><i>￥</i>1132323.22</span>
-                    </div>
-                    <div class="cell itemdelete"><i class="iconfont icon-delete">&#xe664;</i></div>
-                </div>
-				<div class="shop-cart-row sales-goods-row">
-                    <div class="cell itemname">满99减10 送100瓶养乐多</div>
-                    <div class="cell itemprice"><span><i>￥</i>12232.00</span></div>
-                    <div class="cell itemquantity"><button>-</button><input class="" value="2"><button>+</button>
-                    </div>
-                    <div class="cell itemtotal">
-                        <span class="total"><i>￥</i>1132323.22</span>
-                    </div>
-                    <div class="cell itemdelete"><i class="iconfont icon-delete">&#xe664;</i></div>
-                </div>
- 				<div class="shop-cart-row">
-                    <div class="cell itemname">
-                        	<div class="goods-item">
-							<div class="img fl">
-								<a href="" target="_blank" title="">
-									<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
-								</a>
-							</div>
-							<div class="info fl">
-								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡dsg斯蓝莓咖啡和卡斯</a>
-								<p class="spec">规格 550ml  成件规格 24瓶/件</p>
-							</div>
-						</div>
-                    </div>
-                    <div class="cell itemprice"><span><i>￥</i>12232.00</span></div>
-                    <div class="cell itemquantity">12</div>
-                    <div class="cell itemtotal">
-                        <span class="total"><i>￥</i>1132323.22</span>
-                    </div>
-                    <div class="cell itemdelete"></div>
-                </div>
-				<div class="shop-cart-row">
-                    <div class="cell itemname">
-                        	<div class="goods-item">
-							<div class="img fl">
-								<a href="" target="_blank" title="">
-									<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
-								</a>
-							</div>
-							<div class="info fl">
-								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡dsg斯蓝莓咖啡和卡斯</a>
-								<p class="spec">规格 550ml  成件规格 24瓶/件</p>
-							</div>
-						</div>
-                    </div>
-                    <div class="cell itemprice"><span><i>￥</i>12232.00</span></div>
-                    <div class="cell itemquantity">12</div>
-                    <div class="cell itemtotal">
-                        <span class="total"><i>￥</i>1132323.22</span>
-                    </div>
-                    <div class="cell itemdelete"></div>
-                </div>
-            </div>
-			<div class="confirm-order-bottom">
-						<div class="total-price fr">
-							<span class="amount">共计99999商品</span> 合计<span class="price"><i>￥</i>88.88</span>
-						</div>
+				<a href="javascript:;">
+					<img src="http://fuss10.elemecdn.com/a/c8/1796ec76390e5fe5357a869fde250jpeg.jpeg?imageMogr2/thumbnail/190x190/format/webp/quality/85"
+					 alt="">
+					<span class="name">大大批发厂</span>
+				</a>
+				<div class="contact">
+					<img src="../images/tel.png" class="tel">供应商电话<span>028-88515511</span>13521515418
 				</div>
-            <!--购物车商品列表 end -->
+			</div>
+
+			<!--购物车商品列表 -->
+			<div class="confirm-order-cart">
+				<div class="shop-cart-row bg-gray">
+					<div class="cell itemname">商品</div>
+					<div class="cell itemprice">单价</div>
+					<div class="cell itemquantity">数量</div>
+					<div class="cell itemtotal">金额</div>
+					<div class="cell itemdelete">删除</div>
+				</div>
+				<div class="shop-cart-row">
+					<div class="cell itemname">
+						<div class="goods-item">
+							<div class="img fl">
+								<a href="" target="_blank" title="">
+									<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+								</a>
+							</div>
+							<div class="info fl">
+								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡dsg斯蓝莓咖啡和卡斯</a>
+								<p class="spec">规格 550ml 成件规格 24瓶/件</p>
+							</div>
+						</div>
+					</div>
+					<div class="cell itemprice"><span><i>￥</i>12232.00</span></div>
+					<div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
+					</div>
+					<div class="cell itemtotal">
+						<span class="total"><i>￥</i>1132323.22</span>
+					</div>
+					<div class="cell itemdelete"><i class="iconfont icon-delete">&#xe664;</i></div>
+				</div>
+				<div class="shop-cart-row">
+					<div class="cell itemname">
+						<div class="goods-item">
+							<div class="img fl">
+								<a href="" target="_blank" title="">
+									<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+								</a>
+							</div>
+							<div class="info fl">
+								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡dsg斯蓝莓咖啡和卡斯</a>
+								<p class="spec">规格 550ml 成件规格 24瓶/件</p>
+							</div>
+						</div>
+					</div>
+					<div class="cell itemprice"><span><i>￥</i>12232.00</span></div>
+					<div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
+					</div>
+					<div class="cell itemtotal">
+						<span class="total"><i>￥</i>1132323.22</span>
+					</div>
+					<div class="cell itemdelete"><i class="iconfont icon-delete">&#xe664;</i></div>
+				</div>
+				<div class="shop-cart-row">
+					<div class="cell itemname">
+						<div class="goods-item">
+							<div class="img fl">
+								<a href="" target="_blank" title="">
+									<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+								</a>
+							</div>
+							<div class="info fl">
+								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡dsg斯蓝莓咖啡和卡斯</a>
+								<p class="spec">规格 550ml 成件规格 24瓶/件</p>
+							</div>
+						</div>
+					</div>
+					<div class="cell itemprice"><span><i>￥</i>12232.00</span></div>
+					<div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
+					</div>
+					<div class="cell itemtotal">
+						<span class="total"><i>￥</i>1132323.22</span>
+					</div>
+					<div class="cell itemdelete"><i class="iconfont icon-delete">&#xe664;</i></div>
+				</div>
+				<div class="shop-cart-row sales-goods-row">
+					<div class="cell itemname">满99减10 送100瓶养乐多</div>
+					<div class="cell itemprice"><span><i>￥</i>12232.00</span></div>
+					<div class="cell itemquantity"><button>-</button><input class="" value="2"><button>+</button>
+					</div>
+					<div class="cell itemtotal">
+						<span class="total"><i>￥</i>1132323.22</span>
+					</div>
+					<div class="cell itemdelete"><i class="iconfont icon-delete">&#xe664;</i></div>
+				</div>
+				<div class="shop-cart-row">
+					<div class="cell itemname">
+						<div class="goods-item">
+							<div class="img fl">
+								<a href="" target="_blank" title="">
+									<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+								</a>
+							</div>
+							<div class="info fl">
+								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡dsg斯蓝莓咖啡和卡斯</a>
+								<p class="spec">规格 550ml 成件规格 24瓶/件</p>
+							</div>
+						</div>
+					</div>
+					<div class="cell itemprice"><span><i>￥</i>12232.00</span></div>
+					<div class="cell itemquantity">12</div>
+					<div class="cell itemtotal">
+						<span class="total"><i>￥</i>1132323.22</span>
+					</div>
+					<div class="cell itemdelete"></div>
+				</div>
+				<div class="shop-cart-row">
+					<div class="cell itemname">
+						<div class="goods-item">
+							<div class="img fl">
+								<a href="" target="_blank" title="">
+									<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+								</a>
+							</div>
+							<div class="info fl">
+								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡dsg斯蓝莓咖啡和卡斯</a>
+								<p class="spec">规格 550ml 成件规格 24瓶/件</p>
+							</div>
+						</div>
+					</div>
+					<div class="cell itemprice"><span><i>￥</i>12232.00</span></div>
+					<div class="cell itemquantity">12</div>
+					<div class="cell itemtotal">
+						<span class="total"><i>￥</i>1132323.22</span>
+					</div>
+					<div class="cell itemdelete"></div>
+				</div>
+			</div>
+			<div class="confirm-order-bottom">
+				<div class="total-price fr">
+					<span class="amount">共计99999商品</span> 合计<span class="price"><i>￥</i>88.88</span>
+				</div>
+			</div>
+			<!--购物车商品列表 end -->
 		</div>
 	</div>
 	<!-- 购物车列表 end -->
