--- a/pages/index.html
+++ b/pages/index.html
@@ -42,14 +42,27 @@
 			<div class="add-supper fl">
 				<i class="iconfont icon-add-supper">&#xe67a;</i>
 				<span>添加供应商</span>
+				
 			</div>
 			<div class="qrcode-tb fr">
-				<span>商家app</span>
-				<img src="../images/supper-qr.jpg" alt="商家app" class="qrcode-img">
+				<span class="name">商家app</span>
+				<a href="javascript:;">
+					<img src="../images/supper-qr.jpg" alt="商家app" class="qrcode-img">
+				</a>
+				<div class="dropbox triangle-up-index">
+					<span>扫一扫，手机写货更方便</span>
+					<img src="../images/qrcode-m.jpg" alt="商家app" class="qrcode-img-b">
+				</div>
 			</div>
 			<div class="qrcode-tb fr">
-				<span>供应商app</span>
+				<span class="name">供应商app</span>
+				<a href="javascript:;">
 				<img src="../images/supper-qr.jpg" alt="供应商app" class="qrcode-img">
+				</a>
+				<div class="dropbox triangle-up-index">
+					<span>扫一扫，手机写货更方便</span>
+					<img src="../images/qrcode-m.jpg" alt="商家app" class="qrcode-img-b">
+				</div>
 			</div>
 		</div>
 		<nav class="grid-m1210">
@@ -302,7 +315,7 @@
 			</p>
 		</div>
 	</footer>
-	<div class="sidebar side-fixed">
+	<div class="sidebar side-fixed hide">
 		<a href="" class="item current">
 			<i class="iconfont">&#xe67a;</i>
 			<span>添加供应</span>
