add order list and personalcentet

--- a/pages/orderDetail.html
+++ b/pages/orderDetail.html
@@ -249,7 +249,7 @@
 					<div class="cell itemprice">单价</div>
 					<div class="cell itemquantity">数量</div>
 					<div class="cell itemtotal">金额</div>
-					<div class="cell itemdelete">删除</div>
+					<div class="cell itemoperate">删除</div>
 				</div>
 				<div class="shop-cart-row">
 					<div class="cell itemname">
@@ -271,7 +271,7 @@
 					<div class="cell itemtotal">
 						<span class="total"><i>￥</i>1132323.22</span>
 					</div>
-					<div class="cell itemdelete"><i class="iconfont icon-delete">&#xe664;</i></div>
+					<div class="cell itemoperate"><i class="iconfont icon-delete">&#xe664;</i></div>
 				</div>
 				<div class="shop-cart-row">
 					<div class="cell itemname">
@@ -293,7 +293,7 @@
 					<div class="cell itemtotal">
 						<span class="total"><i>￥</i>1132323.22</span>
 					</div>
-					<div class="cell itemdelete"><i class="iconfont icon-delete">&#xe664;</i></div>
+					<div class="cell itemoperate"><i class="iconfont icon-delete">&#xe664;</i></div>
 				</div>
 				<div class="shop-cart-row">
 					<div class="cell itemname">
@@ -315,7 +315,7 @@
 					<div class="cell itemtotal">
 						<span class="total"><i>￥</i>1132323.22</span>
 					</div>
-					<div class="cell itemdelete"><i class="iconfont icon-delete">&#xe664;</i></div>
+					<div class="cell itemoperate"><i class="iconfont icon-delete">&#xe664;</i></div>
 				</div>
 				<div class="shop-cart-row sales-goods-row">
 					<div class="cell itemname">满99减10 送100瓶养乐多</div>
@@ -325,7 +325,7 @@
 					<div class="cell itemtotal">
 						<span class="total"><i>￥</i>1132323.22</span>
 					</div>
-					<div class="cell itemdelete"><i class="iconfont icon-delete">&#xe664;</i></div>
+					<div class="cell itemoperate"><i class="iconfont icon-delete">&#xe664;</i></div>
 				</div>
 				<div class="shop-cart-row">
 					<div class="cell itemname">
@@ -346,7 +346,7 @@
 					<div class="cell itemtotal">
 						<span class="total"><i>￥</i>1132323.22</span>
 					</div>
-					<div class="cell itemdelete"></div>
+					<div class="cell itemoperate"></div>
 				</div>
 				<div class="shop-cart-row">
 					<div class="cell itemname">
@@ -367,7 +367,7 @@
 					<div class="cell itemtotal">
 						<span class="total"><i>￥</i>1132323.22</span>
 					</div>
-					<div class="cell itemdelete"></div>
+					<div class="cell itemoperate"></div>
 				</div>
 			</div>
 			<div class="confirm-order-bottom">
