--- a/pages/focusSupplier.html
+++ b/pages/focusSupplier.html
@@ -29,8 +29,7 @@
 
     <!-- 收藏商品列表 -->
     <div class="mod-full mod-gray">
-        <div class="grid-m1210">
-            <div class="list-main">
+        <div class="grid-m1210 cf">
                 <!--左侧sidebar-->
                 <div class="user-sidebar">
                     <dl>
@@ -84,8 +83,6 @@
                     </table> 
                 </div>
                 <!--关注供应商 end-->
-
-            </div>
         </div>
     </div>
     <!-- 底部 -->
