--- a/pages/orderList.html
+++ b/pages/orderList.html
@@ -28,8 +28,7 @@
     <!--顶部 end-->
 
     <div class="mod-full mod-gray">
-        <div class="grid-m1210">
-            <div class="list-main">
+        <div class="grid-m1210 cf">
                 <!--左侧sidebar-->
                 <div class="user-sidebar">
                     <dl>
@@ -70,6 +69,7 @@
                                 <option value="">全部状态</option>
                             </select>
                             <span class="distribution">配送方式<i class="iconfont icon-selected">&#xe64e;</i>送货上门<i class="iconfont icon-border">&#xe64d;</i>上门自提</span>
+                            <button class="search-btn">搜索</button>
                         </li>
                     </ul>
                     <!-- 订单列表 -->
@@ -93,7 +93,7 @@
                                     <span class="name">大大批发厂大大批发大大批发厂大大批发</span>
                                 </div>
                                 <span class="contact fr">
-                                    <img src="../images/tel.png" class="tel">供应商电话<span>028-88515511</span>13521515418
+                                    <img src="../images/tel.png" class="tel">电话<span>028-88515511</span>13521515418
                                 </span>
                             </div>
                             <div class="shop-cart-row">
@@ -128,7 +128,7 @@
                                     <span class="name">大大批发厂大大批发大大批发厂大大批发</span>
                                 </div>
                                 <span class="contact fr">
-                                    <img src="../images/tel.png" class="tel">供应商电话<span>028-88515511</span>13521515418
+                                    <img src="../images/tel.png" class="tel">电话<span>028-88515511</span>13521515418
                                 </span>
                             </div>
                             <div class="shop-cart-row">
@@ -163,7 +163,7 @@
                                     <span class="name">大大批发厂大大批发大大批发厂大大批发</span>
                                 </div>
                                 <span class="contact fr">
-                                    <img src="../images/tel.png" class="tel">供应商电话<span>028-88515511</span>13521515418
+                                    <img src="../images/tel.png" class="tel">电话<span>028-88515511</span>13521515418
                                 </span>
                             </div>
                             <div class="shop-cart-row">
@@ -198,7 +198,7 @@
                                     <span class="name">大大批发厂大大批发大大批发厂大大批发</span>
                                 </div>
                                 <span class="contact fr">
-                                    <img src="../images/tel.png" class="tel">供应商电话<span>028-88515511</span>13521515418
+                                    <img src="../images/tel.png" class="tel">电话<span>028-88515511</span>13521515418
                                 </span>
                             </div>
                             <div class="shop-cart-row">
@@ -223,8 +223,6 @@
                         </div>
                     </div>
                     <!-- 订单列表 end -->
-                </div>
-
             </div>
         </div>
     </div>
