--- a/pages/supplierDetail.html
+++ b/pages/supplierDetail.html
@@ -48,7 +48,7 @@
 	</div>
 
 	<div class="mod-full">
-		<nav class="grid-m1210">
+		<nav class="grid-m1210 detail-menu">
 			<div class="shopnav-left">
 				<a href="" class="shopnav-tab current">全部商品</a>
 				<a href="" class="shopnav-tab">活动商品</a>
