--- a/pages/myShop.html
+++ b/pages/myShop.html
@@ -29,8 +29,7 @@
 
     <!-- 收藏商品列表 -->
     <div class="mod-full mod-gray">
-        <div class="grid-m1210">
-            <div class="list-main">
+        <div class="grid-m1210 cf">
                 <!--左侧sidebar-->
                 <div class="user-sidebar">
                     <dl>
@@ -102,7 +101,6 @@
                 </div>
                 <!--我的店铺 end-->
 
-            </div>
         </div>
     </div>
     <!-- 底部 -->
