--- a/pages/addMyShop.html
+++ b/pages/addMyShop.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>个人中心-我的店铺</title>
+    <title>个人中心-我的店铺-添加店铺</title>
     <link rel="stylesheet" href="../css/personalCenter.css">
 </head>
 
@@ -51,21 +51,17 @@
                 <!--左侧sidebar end-->
                 <!--我的店铺-->
                 <div class="w-1000 fl mb25">
-                    <h2 class="title">我的店铺</h2>
-                    <div class="my-shop cf">
+                    <h2 class="title">我的店铺 &gt; <span class="fn-16">添加店铺</span></h2>
+                    <div class="my-shop cf add-shop">
                         <div class="fl imgs">
                             <a href="" class="img">
-                                <img class="shop-img" src="http://fuss10.elemecdn.com/a/c8/1796ec76390e5fe5357a869fde250jpeg.jpeg?imageMogr2/thumbnail/190x190/format/webp/quality/85"
-                                    alt="">
+                                <div class="shop-img"><i class="iconfont">&#xe651;</i></div>
                             </a>
-                            <p class="touxiang">头像</p>
+                            <a href="" class="touxiang color-blue">编辑头像</a>
                             <a href="" class="img">
-                                <img class="shop-img" src="http://fuss10.elemecdn.com/a/c8/1796ec76390e5fe5357a869fde250jpeg.jpeg?imageMogr2/thumbnail/190x190/format/webp/quality/85"
-                                    alt="">
-                                    <div class="upload-img"><i class="iconfont">&#xe618;</i><span>上传新图片</span></div>
+                                <div class="shop-img"><i class="iconfont">&#xe618;</i></div>
                             </a>
-                            <a href="" class="color-blue">查看大图</a>
-                            <span>营业执照</span>
+                            <a href="" class="color-blue">营业执照</a>
                         </div>
                         <div class="shop-main">
                             <a href="" class="change-shop">
@@ -81,22 +77,27 @@
                                         <span>定价啊角度讲定价啊就测试测试</span>
                                     </a> 
                             </div>
-                            <p class="shop-name"><label for="" class="label">店铺名：</label><input type="text" class="input" value="瓜瓜超市"></p>
-                            <p><label for="" class="label">联系人：</label><span>李先生...<i class="iconfont icon-user">&#xe62e;</i></span></p>
-                            <p><label for="" class="label">联系电话：</label><input type="text" class="input" value="1223234234232"></p>
-                            <p class="no-label"><input type="text" class="input" value="028232233323"></p>
-                            <p><label for="" class="label">联系地址：</label>四川省/成都市/金牛区</p>
-                            <p class="no-label">五块石街道299号 <a href="javascirpt:;" class="set-address">此地址为收货地址</a></p>
-                            <p><label for="" class="label">执照编号：</label><input type="text" class="input" value="4556548654564546VG"></p>
-                            <p><label for="" class="label">业务类型：</label>
-                                <select class="select-arrow input select-list">
-                                <option>副食</option>
+                            <p class="shop-name"><label for="" class="label">店铺名：</label><input type="text" class="input" placeholder="请输入店铺名称"></p>
+                            <p><label for="" class="label">联系人：</label><input type="text" class="input" placeholder="请输入联系人姓名"></p>
+                            <p><label for="" class="label">联系电话：</label><input type="text" class="input" placeholder="请输入联系电话"></p>
+                            <p class="no-label"><input type="text" class="input" placeholder="请输入联系电话"></p>
+                            <p><label for="" class="label">联系地址：</label>
+                            <select class="select-arrow input select-list">
+                                <option>请选择省市区</option>
                                 <option>副食</option>
                                 <option>副食</option>
                                 </select></p>
-                            <p><label for="" class="label">店铺介绍：</label><textarea class="textarea"></textarea></p>
+                            <p class="no-label"><input type="text" class="input input-long" placeholder="请如实填写您详细地址 如街道门牌号等详细地址"> <a href="javascirpt:;" class="set-address">此地址为收货地址</a></p>
+                            <p><label for="" class="label">执照编号：</label><input type="text" class="input" placeholder="请输入营业执照编号"></p>
+                            <p><label for="" class="label">业务类型：</label>
+                                <select class="select-arrow input select-list">
+                                <option>请选择业务类型</option>
+                                <option>副食</option>
+                                <option>副食</option>
+                                </select></p>
+                            <p><label for="" class="label">店铺介绍：</label><textarea class="textarea" placeholder=" 请间断介绍您店铺信息，此信息将展示在商家列表 "></textarea></p>
                             <button class="btn btn-save">保存</button>
-                            <a href="javascript:;" class="color-blue add-shop">添加店铺</a>
+                            <a href="javascript:;" class="color-blue add-shop">继续添加</a>
                         </div>
                     </div>
                 </div>
