商家端登录注册

--- a/pages/index.html
+++ b/pages/index.html
@@ -37,7 +37,7 @@
 			<div class="search-box fl">
 				<i class="iconfont icon-search">&#xe654;</i>
 				<input type="text" name="" class="search-input fl" placeholder="请输入供应商名称">
-				<button type="submit" class="btn search-btn fl">搜索</button>
+				<button type="submit" class="search-btn fl">搜索</button>
 			</div>
 			<div class="add-supper fl">
 				<i class="iconfont icon-add-supper">&#xe67a;</i>
