--- a/pages/orderList.html
+++ b/pages/orderList.html
@@ -68,7 +68,7 @@
                             <select name="" id="" class="input select-arrow">
                                 <option value="">全部状态</option>
                             </select>
-                            <span class="distribution">配送方式<i class="iconfont icon-selected">&#xe64e;</i>送货上门<i class="iconfont icon-border">&#xe64d;</i>上门自提</span>
+                            <span class="distribution">配送方式<i class="iconfont icon-checkbox-selected"></i>送货上门<i class="iconfont icon-checkbox"></i>上门自提</span>
                             <button class="search-btn">搜索</button>
                         </li>
                     </ul>
