--- a/pages/supplierDetail.html
+++ b/pages/supplierDetail.html
@@ -60,7 +60,7 @@
 			</div>
 			<div class="shop-search-box">
 				<input type="text" name="" class="search-input fl" placeholder="请输入商品名称或商品编码">
-				<button type="submit" class="btn search-btn fl"><i class="iconfont icon-search">&#xe654;</i></button>
+				<button type="submit" class="search-btn fl"><i class="iconfont icon-search">&#xe654;</i></button>
 			</div>
 		</nav>
 	</div>
