--- a/pages/acount.html
+++ b/pages/acount.html
@@ -30,62 +30,131 @@
     <!-- 收藏商品列表 -->
     <div class="mod-full mod-gray">
         <div class="grid-m1210 cf">
-                <!--左侧sidebar-->
-                <div class="user-sidebar">
-                    <dl>
-                        <dt><i class="iconfont">&#xe650;</i>我的订单</dt>
-                        <dd><a href="" class="title">订单列表</a></dd>
-                    </dl>
-                    <dl>
-                        <dt><i class="iconfont">&#xe64b;</i>我的收藏</dt>
-                        <dd><a href="" class="title">收藏商品</a></dd>
-                        <dd><a href="" class="title">关注供应商</a></dd>
-                    </dl>
-                    <dl>
-                        <dt><i class="iconfont">&#xe651;</i>商家中心</dt>
-                        <dd><a href="" class="title">我的店铺</a></dd>
-                        <dd><a href="" class="title current">账号管理</a></dd>
-                        <dd><a href="" class="title">安全中心</a></dd>
-                    </dl>
-                </div>
-                <!--左侧sidebar end-->
-                <!--关注供应商-->
-                <div class="w-1000 fl account-manager">
-                    <h2 class="title">账号管理</h2>
-                    <button class="btn btn-yellow add-acount">添加账号</button>
-                    <table class="table-list"> 
-                        <tr> 
-                            <th width="14.3%">联系人</th>
-                            <th width="16.3%">联系电话</th> 
-                            <th width="20%">负责店铺</th>
-                            <th width="11%">账号权限</th> 
-                            <th width="11%">状态</th>
-                            <th width="12%">创建时间</th>
-                            <th>操作</th>
-                        </tr>
-                        <tr>
-                            <td>李先生</td>
-                            <td>12345678901<br>028-84848488</td>
-                            <td>一二三四五六七八一二三四五六七八一二三四五六七八一二三四五六七八</td>
-                            <td>业务</td>
-                            <td><span class="color-green">正常</span></td>
-                            <td>2017-06-18 12:22:45</td>
-                            <td><button class="btn">编辑</button><button class="btn">重置密码</button></td>
-                        </tr> 
-                        <tr>
-                            <td>李先生</td>
-                            <td>12345678901<br>028-84848488</td>
-                            <td>一二三四五六七八一二三四五六七八一二三四五六七八一二三四五六七八</td>
-                            <td>业务</td>
-                            <td><span class="color-red">停用</span></td>
-                            <td>2017-06-18 12:22:45</td>
-                            <td><button class="btn">编辑</button><button class="btn">重置密码</button></td>
-                        </tr> 
-                    </table> 
-                </div>
-                <!--关注供应商 end-->
+            <!--左侧sidebar-->
+            <div class="user-sidebar">
+                <dl>
+                    <dt><i class="iconfont">&#xe650;</i>我的订单</dt>
+                    <dd><a href="" class="title">订单列表</a></dd>
+                </dl>
+                <dl>
+                    <dt><i class="iconfont">&#xe64b;</i>我的收藏</dt>
+                    <dd><a href="" class="title">收藏商品</a></dd>
+                    <dd><a href="" class="title">关注供应商</a></dd>
+                </dl>
+                <dl>
+                    <dt><i class="iconfont">&#xe651;</i>商家中心</dt>
+                    <dd><a href="" class="title">我的店铺</a></dd>
+                    <dd><a href="" class="title current">账号管理</a></dd>
+                    <dd><a href="" class="title">安全中心</a></dd>
+                </dl>
+            </div>
+            <!--左侧sidebar end-->
+            <!--关注供应商-->
+            <div class="w-1000 fl account-manager">
+                <h2 class="title">账号管理</h2>
+                <button class="btn btn-yellow add-acount">添加账号</button>
+                <table class="table-list">
+                    <tr>
+                        <th width="14.3%">联系人</th>
+                        <th width="16.3%">联系电话</th>
+                        <th width="20%">负责店铺</th>
+                        <th width="11%">账号权限</th>
+                        <th width="11%">状态</th>
+                        <th width="12%">创建时间</th>
+                        <th>操作</th>
+                    </tr>
+                    <tr>
+                        <td>李先生</td>
+                        <td>12345678901<br>028-84848488</td>
+                        <td>一二三四五六七八一二三四五六七八一二三四五六七八一二三四五六七八</td>
+                        <td>业务</td>
+                        <td><span class="color-green">正常</span></td>
+                        <td>2017-06-18 12:22:45</td>
+                        <td><button class="btn">编辑</button><button class="btn">重置密码</button></td>
+                    </tr>
+                    <tr>
+                        <td>李先生</td>
+                        <td>12345678901<br>028-84848488</td>
+                        <td>一二三四五六七八一二三四五六七八一二三四五六七八一二三四五六七八</td>
+                        <td>业务</td>
+                        <td><span class="color-red">停用</span></td>
+                        <td>2017-06-18 12:22:45</td>
+                        <td><button class="btn">编辑</button><button class="btn">重置密码</button></td>
+                    </tr>
+                </table>
+            </div>
+            <!--关注供应商 end-->
         </div>
     </div>
+    <!-- 半透明弹窗 -->
+    <div class="cover user-cover-layer">
+        <!--添加账号 -->
+        <div class="layer-main add-acount-input hide">
+            <h2 class="title">账号管理<span> &gt; 添加账号 &gt; 添加信息</span></h2>
+            <div class="input-list">
+            <p><label for="" class="label">业务姓名：</label><input type="text" class="input" placeholder="请输入业务名称"></p>
+            <p><label for="" class="label">账号类型：</label>
+                <select class="select-arrow input select-list">
+                                <option>请选择账号类型</option>
+                                <option>副食</option>
+                                <option>副食</option>
+                                </select></p>
+            <p><label for="" class="label">联系电话：</label><input type="text" class="input" placeholder="请输入联系电话"></p>
+            <p><label for="" class="label">负责店铺：</label>
+                <select class="select-arrow input select-list">
+                                <option>请选择负责店铺</option>
+                                <option>副食</option>
+                                <option>副食</option>
+                                </select></p>
+            <p><label for="" class="label">密&nbsp; &nbsp; &nbsp; &nbsp;码：</label> <input type="password" class="input" placeholder="请输入密码"></p>
+            <p><label for="" class="label">确认密码：</label> <input type="password" class="input" placeholder="请再次输入密码">
+            </p>  
+            </div>
+            <button class="btn btn-save">保存</button>    
+            <a href="javascript:;" class="color-blue go-back">返回 &gt;</a>
+        </div>
+        <!--添加账号 end-->
+        <!--重置密码 -->
+          <div class="layer-main reset-password-input hide">
+            <h2 class="title">账号管理<span> &gt; 重置密码</span></h2>
+            <div class="input-list">
+            <p><label for="" class="label">密&nbsp; &nbsp; &nbsp; &nbsp;码：</label><input type="password" class="input" placeholder="请输入密码"><i class="iconfont">&#xe63a;</i></p>
+            <p><label for="" class="label">确认密码：</label><input type="password" class="input" placeholder="请再次输入密码"><i class="iconfont">&#xe63a;</i></p>
+            </div>
+            <button class="btn btn-save">保存</button>    
+            <a href="javascript:;" class="color-blue go-back">返回 &gt;</a>
+        </div>
+        <!--重置密码 end -->
+        <!--编辑账号 -->
+        <div class="layer-main edit-acount-input">
+            <h2 class="title">账号管理<span> &gt; 编辑账号 </span></h2>
+            <div class="input-list">
+            <p><label for="" class="label">业务姓名：</label><input type="text" class="input" value="李四"></p>
+            <p><label for="" class="label">账号类型：</label>
+                <select class="select-arrow input select-list">
+                                <option>请选择账号类型</option>
+                                <option selected>业务</option>
+                                <option>副食</option>
+                                </select></p>
+            <p><label for="" class="label">联系电话：</label><input type="text" class="input" value="122323223434"></p>
+            <p><label for="" class="label">负责店铺：</label>
+                <select class="select-arrow input select-list">
+                                <option>请选择负责店铺</option>
+                                <option selected>小小超市</option>
+                                <option>副食</option>
+                                </select></p>
+            <p><label for="" class="label">密&nbsp; &nbsp; &nbsp; &nbsp;码：</label><input type="password" class="input" value="123233"><i class="iconfont icon-eye-open"></i></p>
+            <p><label for="" class="label">确认密码：</label><input type="password" class="input" value="123233"><i class="iconfont icon-eye"></i></p>
+            <p><label for="" class="label">状&nbsp; &nbsp; &nbsp; &nbsp;态：</label> <i class="iconfont icon-checkbox-selected"></i> 正常 <i class="iconfont icon-checkbox"></i> 停用
+            </p>  
+            </div>
+            <button class="btn btn-save">保存</button>    
+            <a href="javascript:;" class="color-blue go-back">返回 &gt;</a>
+        </div>
+        <!--编辑账号 end-->
+    </div>
+    <!-- 半透明弹窗 end -->
+   
     <!-- 底部 -->
     <footer class="mod-full">
         <div class="grid-m1210">
