--- a/pages/sellerLogin.html
+++ b/pages/sellerLogin.html
@@ -13,29 +13,48 @@
         <header class="grid-m1210">
             <a href="/" target="_blank" class="topbar-item topbar-logo">
                 <img src="../images/xiehuo-logo.png" alt="写货宝"></a>
-                <span>欢迎您来到写货宝商家端~！</span>
+            <span>欢迎您来到写货宝商家端~！</span>
         </header>
     </div>
     <!--顶部 end-->
-     <!--主要内容-->
+
     <div class="mod-full">
         <div class="grid-m1210 login-bg">
-            <div class="input-list">
-                <h2 class="title">用户登录</h2>
-                <p class="new-letter"><label for="" class="label">账&nbsp; 号：</label><input type="text" class="input" placeholder="请输入你注册的11位手机号码"></p>
-                <p class="new-letter"><label for="" class="label">密&nbsp; 码：</label><input type="password" class="input" placeholder="请输入密码"></p>
-                <p class="txt-warn">手机号或密码错误请确认后输入</p>
-                <button class="btn-save">登录</button>
-                <div class="bottom-info">
-                    <a href="" target="_blank">忘记密码</a>
-                    <a href="" target="_blank">注册账号</a>
+             <!--登录-->
+            <div class="login-main hide">
+                <div class="input-list">
+                    <h2 class="title">用户登录</h2>
+                    <p class="new-letter"><label for="" class="label">账&nbsp; 号：</label><input type="text" class="input" placeholder="请输入你注册的11位手机号码"></p>
+                    <p class="new-letter"><label for="" class="label">密&nbsp; 码：</label><input type="password" class="input" placeholder="请输入密码"></p>
+                    <p class="txt-warn">手机号或密码错误请确认后输入</p>
+                    <button class="btn-save">登录</button>
+                    <div class="bottom-info">
+                        <a href="" target="_blank">忘记密码</a>
+                        <a href="" target="_blank">注册账号</a>
+                    </div>
                 </div>
-            </div>
                 <p class="info">Hi , 老朋友，欢迎登陆写货宝。如在使用中遇到困难，请联系我们<br>还不是会员？<a href="" class="color-yellow">立即注册</a></p>
             </div>
+            <!--登录 end-->
+             <!--找回密码-->
+            <div class="findpwd-main">
+                <div class="input-list">
+                    <h2 class="title">找回密码</h2>
+                    <p><label for="" class="label">手机号：</label><input type="text" class="input" placeholder="请输入你注册的11位手机号码"></p>
+                    <p><label for="" class="label">验证码：</label><input type="password" class="input" placeholder="请输入密码"></p>
+                    <p class="txt-warn">手机号或密码错误请确认后输入</p>
+                    <button class="btn-save">下一步</button>
+                    <div class="bottom-info">
+                        <a href="" target="_blank" class="active">已有账号 登录</a>
+                        <a href="" target="_blank">注册账号</a>
+                    </div>
+                </div>
+            </div>
+            <!--找回密码 end-->
         </div>
     </div>
-     <!--主要内容 end-->
+    
+    
     <!-- 底部 -->
     <footer class="mod-full mod-gray">
         <div class="grid-m1210">
