--- a/pages/sellerLogin.html
+++ b/pages/sellerLogin.html
@@ -37,20 +37,49 @@
             </div>
             <!--登录 end-->
              <!--找回密码-->
-            <div class="findpwd-main">
+            <div class="findpwd-main hide">
                 <div class="input-list">
                     <h2 class="title">找回密码</h2>
                     <p><label for="" class="label">手机号：</label><input type="text" class="input" placeholder="请输入你注册的11位手机号码"></p>
-                    <p><label for="" class="label">验证码：</label><input type="password" class="input" placeholder="请输入密码"></p>
+                    <p><label for="" class="label">验证码：</label><input type="password" class="input validate-code" placeholder="请输入验证码"><span class="get-code">获取验证码</span></p>
                     <p class="txt-warn">手机号或密码错误请确认后输入</p>
                     <button class="btn-save">下一步</button>
                     <div class="bottom-info">
-                        <a href="" target="_blank" class="active">已有账号 登录</a>
+                        <a href="" target="_blank">已有账号 <span class="color-yellow">登录</span></a>
                         <a href="" target="_blank">注册账号</a>
                     </div>
                 </div>
             </div>
             <!--找回密码 end-->
+             <!--修改密码-->
+            <div class="editpwd-main hide">
+                <div class="input-list">
+                    <h2 class="title"><span>找回密码&nbsp;  &gt; &nbsp; </span> 修改密码</h2>
+                    <p><label for="" class="label">新&nbsp; 密&nbsp;码 ：</label><input type="text" class="input" placeholder="请输入你的密码"></p>
+                    <p><label for="" class="label">确认密码 ：</label><input type="password" class="input" placeholder="请确认密码"></p>
+                    <p class="txt-warn">手机号或密码错误请确认后输入</p>
+                    <button class="btn-save">确定</button>
+                </div>
+            </div>
+            <!--修改密码 end-->
+            <!--注册-->
+            <div class="register-main">
+                <div class="input-list">
+                    <h2 class="title">欢迎注册写货宝</h2>
+                    <p class="new-letter"><label for="" class="label">手机号：</label><input type="text" class="input" placeholder="请输入你注册的11位手机号码"></p>
+                    <p class="new-letter"><label for="" class="label">验证码：</label><input type="text" class="input validate-code" placeholder="请输入验证码"><span class="get-code">获取验证码</span></p>
+                    <p class="new-letter"><label for="" class="label">姓&nbsp;&nbsp;名：</label><input type="text" class="input" placeholder=""></p>
+                    <p class="new-letter"><label for="" class="label">密&nbsp;&nbsp;码：</label><input type="password" class="input" placeholder=""></p>
+                    <p><label for="" class="label">确定密码 ：</label><input type="password" class="input" placeholder=""></p>
+                    <p class="txt-warn">验证码错误，请确认后输入</p>
+                    <button class="btn-save">下一步</button>
+                    <div class="bottom-info">
+                        <a href="" target="_blank">已有账号 <span class="color-yellow">登录</span></a>
+                        <a href="" target="_blank"><i class="iconfont icon-checkbox"></i>注册即同意《写货宝使用条款》</a>
+                    </div>
+                </div>
+            </div>
+            <!--注册 end-->
         </div>
     </div>
     
