--- a/pages/sellerLogin.html
+++ b/pages/sellerLogin.html
@@ -69,13 +69,13 @@
                     <p class="new-letter"><label for="" class="label">手机号：</label><input type="text" class="input" placeholder="请输入你注册的11位手机号码"></p>
                     <p class="new-letter"><label for="" class="label">验证码：</label><input type="text" class="input validate-code" placeholder="请输入验证码"><span class="get-code">获取验证码</span></p>
                     <p class="new-letter"><label for="" class="label">姓&nbsp;&nbsp;名：</label><input type="text" class="input" placeholder=""></p>
-                    <p class="new-letter"><label for="" class="label">密&nbsp;&nbsp;码：</label><input type="password" class="input" placeholder=""></p>
+                    <p class="new-letter pwd-by-icon"><label for="" class="label">密&nbsp;&nbsp;码：</label><input type="password" class="input" placeholder=""><i class="iconfont icon-eye-open"></i></p>
                     <p><label for="" class="label">确定密码 ：</label><input type="password" class="input" placeholder=""></p>
                     <p class="txt-warn">验证码错误，请确认后输入</p>
                     <button class="btn-save">下一步</button>
                     <div class="bottom-info">
-                        <a href="" target="_blank">已有账号 <span class="color-yellow">登录</span></a>
-                        <a href="" target="_blank"><i class="iconfont icon-checkbox"></i>注册即同意《写货宝使用条款》</a>
+                        <span>已有账号 <a href="" class="color-yellow">登录</a></span>
+                        <span><i class="iconfont icon-checkbox"></i>注册即同意《写货宝使用条款》</span>
                     </div>
                 </div>
             </div>
