add product page

--- a/pages/product.html
+++ b/pages/product.html
@@ -37,13 +37,13 @@
         <div class="grid-m1210">
             <div class="footer-main product-footer">
                 <div class="links">
-                    <a href="" target="_blank" class="f-16">关于写货</a>
+                    <a href="" target="_blank" class="f-16">关于我们</a>
                     <a href="" target="_blank" class="f-16">我是供应商</a>
                     <a href="" target="_blank" class="f-16">我要开店</a>
                     <a href="" target="_blank">公司介绍</a>
                     <a href="" target="_blank">申请供应商</a>
                     <a href="" target="_blank">申请商家</a>
-                    <a href="" target="_blank">关于我们</a>
+                    <a href="" target="_blank">联系我们</a>
                 </div>
             </div>
             <p class="copyright">
