--- a/pages/acount.html
+++ b/pages/acount.html
@@ -88,73 +88,105 @@
     </div>
     <!-- 半透明弹窗 -->
     <div class="cover user-cover-layer">
-        <!--添加账号 -->
+        <!--添加账号第一步（状态1）-->
+        <div class="layer-main add-acount-first-input">
+            <a href="javascript:;" class="close-cover"><i class="iconfont">&#xe656;</i></a>
+            <h2 class="title">账号管理<span> &gt; 添加账号</span></h2>
+            <div class="input-list">
+                    <p class="new-letter"><label for="" class="label">手机号：</label><input type="text" class="input" placeholder="请输入11位有效手机号码"></p>
+            </div>
+            <p class="txt-tip">提示： 验证手机号是否注册，如果注册请联系网站管理员</p>
+            <button class="btn btn-save">下一步</button>
+            <a href="javascript:;" class="color-blue go-back">返回 &gt;</a>
+        </div>
+        <!--添加账号第一步 end-->
+        <!--添加账号第一步（状态2）-->
+        <div class="layer-main add-acount-first-input hide">
+            <a href="javascript:;" class="close-cover"><i class="iconfont">&#xe656;</i></a>
+            <h2 class="title">账号管理<span> &gt; 添加账号</span></h2>
+            <div class="input-list">
+                    <p class="new-letter"><label for="" class="label">手机号：</label><input type="text" class="input" placeholder="请输入你注册的11位手机号码"></p>
+                    <p class="new-letter"><label for="" class="label">验证码：</label><input type="text" class="input validate-code" placeholder="请输入验证码"><span class="btn-save get-code">获取验证码</span></p>
+            </div>
+            <p class="txt-tip">提示： 您的手机号已注册，需要本人获取手机验证码</p>
+            <button class="btn btn-save">下一步</button>
+            <a href="javascript:;" class="color-blue go-back">返回 &gt;</a>
+        </div>
+        <!--添加账号第一步 end-->
+        <!--添加账号第二步 -->
         <div class="layer-main add-acount-input hide">
+            <a href="javascript:;" class="close-cover"><i class="iconfont">&#xe656;</i></a>
             <h2 class="title">账号管理<span> &gt; 添加账号 &gt; 添加信息</span></h2>
             <div class="input-list">
-            <p><label for="" class="label">业务姓名：</label><input type="text" class="input" placeholder="请输入业务名称"></p>
-            <p><label for="" class="label">账号类型：</label>
-                <select class="select-arrow input select-list">
+                <p><label for="" class="label">业务姓名：</label><input type="text" class="input" placeholder="请输入业务名称"></p>
+                <p><label for="" class="label">账号类型：</label>
+                    <select class="select-arrow input select-list">
                                 <option>请选择账号类型</option>
                                 <option>副食</option>
                                 <option>副食</option>
                                 </select></p>
-            <p><label for="" class="label">联系电话：</label><input type="text" class="input" placeholder="请输入联系电话"></p>
-            <p><label for="" class="label">负责店铺：</label>
-                <select class="select-arrow input select-list">
+                <p><label for="" class="label">联系电话：</label><input type="text" class="input" placeholder="请输入联系电话"></p>
+                <p><label for="" class="label">负责店铺：</label>
+                    <select class="select-arrow input select-list">
                                 <option>请选择负责店铺</option>
                                 <option>副食</option>
                                 <option>副食</option>
                                 </select></p>
-            <p><label for="" class="label">密&nbsp; &nbsp; &nbsp; &nbsp;码：</label> <input type="password" class="input" placeholder="请输入密码"></p>
-            <p><label for="" class="label">确认密码：</label> <input type="password" class="input" placeholder="请再次输入密码">
-            </p>  
+                <p><label for="" class="label">密&nbsp; &nbsp; &nbsp; &nbsp;码：</label> <input type="password" class="input" placeholder="请输入密码"></p>
+                <p><label for="" class="label">确定密码：</label> <input type="password" class="input" placeholder="请再次输入密码">
+                </p>
             </div>
-            <button class="btn btn-save">保存</button>    
+            <button class="btn btn-save mt210">保存</button>
             <a href="javascript:;" class="color-blue go-back">返回 &gt;</a>
         </div>
-        <!--添加账号 end-->
+        <!--添加账号第二步 end-->
         <!--重置密码 -->
-          <div class="layer-main reset-password-input hide">
+        <div class="layer-main reset-password-input hide">
+            <a href="javascript:;" class="close-cover"><i class="iconfont">&#xe656;</i></a>
             <h2 class="title">账号管理<span> &gt; 重置密码</span></h2>
             <div class="input-list">
-            <p><label for="" class="label">密&nbsp; &nbsp; &nbsp; &nbsp;码：</label><input type="password" class="input" placeholder="请输入密码"><i class="iconfont">&#xe63a;</i></p>
-            <p><label for="" class="label">确认密码：</label><input type="password" class="input" placeholder="请再次输入密码"><i class="iconfont">&#xe63a;</i></p>
+                <p><label for="" class="label">密&nbsp; &nbsp; &nbsp; &nbsp;码：</label><input type="password" class="input" placeholder="请输入密码">
+                    <i
+                        class="iconfont">&#xe63a;</i>
+                </p>
+                <p><label for="" class="label">确认密码：</label><input type="password" class="input" placeholder="请再次输入密码"><i class="iconfont">&#xe63a;</i></p>
             </div>
-            <button class="btn btn-save">保存</button>    
+            <button class="btn btn-save mt210">保存</button>
             <a href="javascript:;" class="color-blue go-back">返回 &gt;</a>
         </div>
         <!--重置密码 end -->
         <!--编辑账号 -->
-        <div class="layer-main edit-acount-input">
+        <div class="layer-main edit-acount-input hide">
+            <a href="javascript:;" class="close-cover"><i class="iconfont">&#xe656;</i></a>
             <h2 class="title">账号管理<span> &gt; 编辑账号 </span></h2>
             <div class="input-list">
-            <p><label for="" class="label">业务姓名：</label><input type="text" class="input" value="李四"></p>
-            <p><label for="" class="label">账号类型：</label>
-                <select class="select-arrow input select-list">
+                <p><label for="" class="label">业务姓名：</label><input type="text" class="input" value="李四"></p>
+                <p><label for="" class="label">账号类型：</label>
+                    <select class="select-arrow input select-list">
                                 <option>请选择账号类型</option>
                                 <option selected>业务</option>
                                 <option>副食</option>
                                 </select></p>
-            <p><label for="" class="label">联系电话：</label><input type="text" class="input" value="122323223434"></p>
-            <p><label for="" class="label">负责店铺：</label>
-                <select class="select-arrow input select-list">
+                <p><label for="" class="label">联系电话：</label><input type="text" class="input" value="122323223434"></p>
+                <p><label for="" class="label">负责店铺：</label>
+                    <select class="select-arrow input select-list">
                                 <option>请选择负责店铺</option>
                                 <option selected>小小超市</option>
                                 <option>副食</option>
                                 </select></p>
-            <p><label for="" class="label">密&nbsp; &nbsp; &nbsp; &nbsp;码：</label><input type="password" class="input" value="123233"><i class="iconfont icon-eye-open"></i></p>
-            <p><label for="" class="label">确认密码：</label><input type="password" class="input" value="123233"><i class="iconfont icon-eye"></i></p>
-            <p><label for="" class="label">状&nbsp; &nbsp; &nbsp; &nbsp;态：</label> <i class="iconfont icon-checkbox-selected"></i> 正常 <i class="iconfont icon-checkbox"></i> 停用
-            </p>  
+                <p><label for="" class="label">密&nbsp; &nbsp; &nbsp; &nbsp;码：</label><input type="password" class="input" value="123233"><i class="iconfont icon-eye-open"></i>
+                </p>
+                <p><label for="" class="label">确认密码：</label><input type="password" class="input" value="123233"><i class="iconfont icon-eye"></i></p>
+                <p><label for="" class="label">状&nbsp; &nbsp; &nbsp; &nbsp;态：</label> <i class="iconfont icon-checkbox-selected"></i>                    正常 <i class="iconfont icon-checkbox"></i> 停用
+                </p>
             </div>
-            <button class="btn btn-save">保存</button>    
+            <button class="btn btn-save mt210">保存</button>
             <a href="javascript:;" class="color-blue go-back">返回 &gt;</a>
         </div>
         <!--编辑账号 end-->
     </div>
     <!-- 半透明弹窗 end -->
-   
+
     <!-- 底部 -->
     <footer class="mod-full">
         <div class="grid-m1210">
